--- a/index.html
+++ b/index.html
@@ -111,41 +111,35 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="working-list list">
-            <li class="img-item">
-              <div class="working-thumb">
-                <img
-                  src="./images/working-proces/img1-1.jpg"
-                  alt="Мужчина за рабочим столом пишет код на компьютере"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="working-text">Десктопные приложения</p>
-              </div>
+            <li class="img-item working-thumb">
+              <img
+                src="./images/working-proces/img1-1.jpg"
+                alt="Мужчина за рабочим столом пишет код на компьютере"
+                width="370"
+                height="294"
+                class="image"
+              />
+              <p class="working-text">Десктопные приложения</p>
             </li>
-            <li class="img-item">
-              <div class="working-thumb">
-                <img
-                  src="./images/working-proces/img1-2.jpg"
-                  alt="Женщина держит в руках телефон на фоне ноутбука"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="working-text">Мобильные приложения</p>
-              </div>
+            <li class="img-item working-thumb">
+              <img
+                src="./images/working-proces/img1-2.jpg"
+                alt="Женщина держит в руках телефон на фоне ноутбука"
+                width="370"
+                height="294"
+                class="image"
+              />
+              <p class="working-text">Мобильные приложения</p>
             </li>
-            <li class="img-item">
-              <div class="working-thumb">
-                <img
-                  src="./images/working-proces/img1-3.jpg"
-                  alt="Палитра цветов для рисования на планшете"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="working-text">Дизайнерские решения</p>
-              </div>
+            <li class="img-item working-thumb">
+              <img
+                src="./images/working-proces/img1-3.jpg"
+                alt="Палитра цветов для рисования на планшете"
+                width="370"
+                height="294"
+                class="image"
+              />
+              <p class="working-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -467,13 +461,7 @@
     <!-- Hero modal -->
     <div class="hero-backdrop is-hidden" data-modal>
       <div class="hero-modal">
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto iure
-          veritatis fuga dolorum. Quisquam, aperiam alias in ex voluptatum vitae
-          nostrum culpa perferendis veritatis cumque soluta, laborum odio
-          deserunt dicta.
-        </p>
-        <button class="modal-button" type="button" data-modal-close>
+        <button class="hero-modal-button" type="button" data-modal-close>
           <svg class="modal-icon" width="18" height="18">
             <use href="./images/svg/symbol-defs.svg#close"></use>
           </svg>
